# ft_linear_regression

./: .gitignore  README.md  coefficients.json  predict.py  pyproject.toml  start.sh  statistics.py  train.py
configurations/: predict_configurations.json  train_configurations.json
libs/: templates.py
libs/models/: __init__.py  coefficients.py  linear_regression.py  point.py  predict_configurations.py  train_comfigurations.py
libs/utils/: check_corrections.py  make_prediction.py  normalization.py  stat_functions.py  visualisation.py  work_with_files.py
statistics/: make_stat.py
