[tool.poetry]
name = "ft_linear_regression"
version = "0.1.0"
description = "21 School project about linear regression"
authors = ["Bazarovinc"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
